cfn_benchmark/cfn_templates_greenfield/manpaz__aws/cloudformation/bashlinux_single_vpc-network.yaml
---
# Bashlinux::Single::VPC Network
#
#   Cloudformation template to deploy an environment VPC
#   with 1 Availability Zone
#
#   Manuel F Martinez
#   Bashlinux
#   Los Angeles, CA
#
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC Single Network template

###############################################################################
Parameters:

  CreateNAT:
    Description: Deploy an AWS NAT GW if the bastion is not a NAT GW
    Type: String
    MinLength: "2"
    MaxLength: "3"
    Default: "no"
    AllowedValues: [ "yes", "no" ]
    ConstraintDescription: Can only contain "yes", "no".

  Environment:
    Description: Working environment
    Type: String
    MinLength: "1"
    MaxLength: "20"
    Default: staging
    AllowedValues: [ "prod", "staging" ]
    ConstraintDescription: >
      Environment name can only contain "prod" or "staging"

  Organization:
    Description: Organization or Customer name
    Type: String
    MinLength: "1"
    MaxLength: "32"
    Default: bashlinux
    AllowedPattern: "[a-zA-Z0-9\\-]*"
    ConstraintDescription: >
      Name of the organization must contains only letters, numbers and hyphens

###############################################################################
Conditions:

  noNatGateway:
    !Equals [ !Ref CreateNAT, yes ]

###############################################################################
Mappings:

  Env2Domains:
    prod:
      Domain: prod.bashlinux.com
    staging:
      Domain: staging.bashlinux.com

  SubnetConfigIpv6:
    Public1A:
      Subnet: 60::/64
    Public1B:
      Subnet: 61::/64
    Public2A:
      Subnet: 70::/64

  SubnetConfig:
    VPC:
      prod    : 10.1.0.0/16
      staging : 10.11.0.0/20

    Public1A:
      prod    : 10.1.0.0/26
      staging : 10.11.0.0/26
    Public1B:
      prod    : 10.1.0.64/26
      staging : 10.11.0.64/26
    Public2A:
      prod    : 10.1.1.0/26
      staging : 10.11.1.0/26

    Private1A:
      prod    : 10.1.5.0/24
      staging : 10.11.5.0/24
    Private2A:
      prod    : 10.1.6.0/24
      staging : 10.11.6.0/24

###############################################################################
Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [ SubnetConfig, VPC, !Ref Environment ]
      EnableDnsHostnames: "true"
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-vpc"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-internet-gateway"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  EgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      VpcId: !Ref VPC

  Ipv6VPCCidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref VPC

  PublicSubnet1A:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ "0", !GetAZs "" ]
      AssignIpv6AddressOnCreation: "true"
      Ipv6CidrBlock:
        !Join
        - ""
        - - !Select
            - "0"
            - !Split
              - 00::/56
              - !Select
                - "0"
                - !GetAtt VPC.Ipv6CidrBlocks
          - !FindInMap [ SubnetConfigIpv6, Public1A, Subnet ]
      CidrBlock: !FindInMap [ SubnetConfig, Public1A, !Ref Environment ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-public-subnet-1a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:application-tier
        Value: alb
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  PublicSubnet1B:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ "1", !GetAZs "" ]
      AssignIpv6AddressOnCreation: "true"
      Ipv6CidrBlock:
        !Join
        - ""
        - - !Select
            - "0"
            - !Split
              - 00::/56
              - !Select
                - "0"
                - !GetAtt VPC.Ipv6CidrBlocks
          - !FindInMap [ SubnetConfigIpv6, Public1B, Subnet ]
      CidrBlock: !FindInMap [ SubnetConfig, Public1B, !Ref Environment ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-public-subnet-1b"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:application-tier
        Value: alb
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  PublicSubnet2A:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ "0", !GetAZs "" ]
      AssignIpv6AddressOnCreation: "true"
      Ipv6CidrBlock:
        !Join
        - ""
        - - !Select
            - "0"
            - !Split
              - 00::/56
              - !Select
                - "0"
                - !GetAtt VPC.Ipv6CidrBlocks
          - !FindInMap [ SubnetConfigIpv6, Public2A, Subnet ]
      CidrBlock: !FindInMap [ SubnetConfig, Public2A, !Ref Environment ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-public-subnet-2a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:application-tier
        Value: ec2
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: bashlinux-public-route-table
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteIpv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationIpv6CidrBlock: "::/0"
      GatewayId: !Ref InternetGateway

  PublicSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet1BRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1B
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2A
      RouteTableId: !Ref PublicRouteTable

  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: bashlinux-public-acl
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  InboundHTTPPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "80"
        To: "80"

  InboundHTTPPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "101"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "80"
        To: "80"

  InboundHTTPSPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "102"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "443"
        To: "443"

  InboundHTTPSPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "103"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "443"
        To: "443"

  InboundSSHPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "104"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "22"
        To: "22"

  InboundSSHPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "105"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "22"
        To: "22"

  InboundBastionPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "106"
      Protocol: "-1"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "1194"
        To: "1194"

  InboundBastionPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "107"
      Protocol: "-1"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "1194"
        To: "1194"

  InboundEphemeralPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "108"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "1024"
        To: "65535"

  InboundEphemeralPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "109"
      Protocol: "6"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "1024"
        To: "65535"

  OutboundPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: allow
      Egress: "true"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "0"
        To: "65535"

  OutboundPublicNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "101"
      Protocol: "-1"
      RuleAction: allow
      Egress: "true"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "0"
        To: "65535"

  PublicSubnet1ANetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnet1BNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1B
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnet2ANetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2A
      NetworkAclId: !Ref PublicNetworkAcl

  PrivateSubnet1A:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ "0", !GetAZs "" ]
      CidrBlock: !FindInMap [ SubnetConfig, Private1A, !Ref Environment ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-subnet-1a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:application-tier
        Value: app
      - Key: bashlinux:network-visibility
        Value: private
      - Key: bashlinux:can-delete
        Value: "false"

  PrivateSubnet2A:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ "0", !GetAZs "" ]
      CidrBlock: !FindInMap [ SubnetConfig, Private2A, !Ref Environment ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-subnet-2a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:application-tier
        Value: data
      - Key: bashlinux:network-visibility
        Value: private
      - Key: bashlinux:can-delete
        Value: "false"

  NatGatewayA:
    Type: AWS::EC2::NatGateway
    Condition: noNatGateway
    Properties:
      AllocationId: !GetAtt NatIPAddressA.AllocationId
      SubnetId: !Ref PublicSubnet1A
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-nat-gateway-a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: private
      - Key: bashlinux:can-delete
        Value: "false"

  NatIPAddressA:
    DependsOn: InternetGateway
    Condition: noNatGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-nat-ipaddress-a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: public
      - Key: bashlinux:can-delete
        Value: "false"

  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-route-table-a"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:network-visibility
        Value: private
      - Key: bashlinux:can-delete
        Value: "false"

  PrivateDefaultRouteA:
    Type: AWS::EC2::Route
    Condition: noNatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA

  PrivateSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1A
      RouteTableId: !Ref PrivateRouteTableA

  PrivateSubnet2ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2A
      RouteTableId: !Ref PrivateRouteTableA

  PrivateNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-acl"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"

  InboundPrivateNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "0"
        To: "65535"

  InboundPrivateNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: "101"
      Protocol: "-1"
      RuleAction: allow
      Egress: "false"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "0"
        To: "65535"

  OutBoundPrivateNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: allow
      Egress: "true"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "0"
        To: "65535"

  OutBoundPrivateNetworkAclIpv6Entry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: "101"
      Protocol: "-1"
      RuleAction: allow
      Egress: "true"
      Ipv6CidrBlock: "::/0"
      PortRange:
        From: "0"
        To: "65535"

  PrivateSubnet1ANetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1A
      NetworkAclId: !Ref PrivateNetworkAcl

  PrivateSubnet2ANetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2A
      NetworkAclId: !Ref PrivateNetworkAcl

  HpcPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: cluster
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-placement-group"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"

  EnvDHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !FindInMap [ Env2Domains, !Ref Environment, Domain ]
      DomainNameServers:
        - AmazonProvidedDNS
      Tags:
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"
      - Key: bashlinux:network-visibility
        Value: private
      - Key: Name
        Value: !FindInMap [ Env2Domains, !Ref Environment, Domain ]

  EnvVPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      DhcpOptionsId: !Ref EnvDHCPOptions
      VpcId: !Ref VPC

###############################################################################
Outputs:

  VpcId:
    Description: "VPC: Created VPC ID"
    Value: !Ref VPC
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcId"

  VpcCidr:
    Description: "VPC: Created VPC CIDR"
    Value: !FindInMap [ SubnetConfig, VPC, !Ref Environment ]
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcCidr"

  VpcAlbPublicSubnetIds:
    Description: "VPC: ALB Public Subnet IDs"
    Value: !Join
      - ","
      - - !Ref PublicSubnet1A
        - !Ref PublicSubnet1B
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcAlbPublicSubnetIds"

  VpcEndpointPrivateSubnetIds:
    Description: "VPC: Service Endpoints Private Subnet IDs"
    Value: !Join
      - ","
      - - !Ref PrivateSubnet1A
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcEndpointPrivateSubnetIds"

  VpcEndpointRouteTableIds:
    Description: "VPC: Service Endpoints Private Route Table IDs"
    Value: !Join
      - ","
      - - !Ref PrivateRouteTableA
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcEndpointRouteTableIds"

  VpcMainPublicSubnetId:
    Description: "VPC: Primary Public Subnet ID"
    Value: !Ref PublicSubnet1A
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcMainPublicSubnetId"

  VpcMainPrivateSubnetId:
    Description: "VPC: Primary Private Subnet ID"
    Value: !Ref PrivateSubnet1A
    Export:
      Name: !Sub "bashlinux-${Environment}-VpcMainPrivateSubnetId"

  VpcNatGatewayA:
    Description: "NatGateway: Privamy NAT Gateway"
    Condition: noNatGateway
    Value: !Ref NatGatewayA
    Export:
      Name: !Sub "bashlinux-${Environment}-NatGatewayA"
