cfn_benchmark/cfn_templates_greenfield/manpaz__aws/cloudformation/bashlinux_vpc-endpoint.yaml
# Bashlinux::VPC::Endpoint
#   Cloudformation template to deploy a VPC endpoint
#
#   Manuel F Martinez
#   Bashlinux
#
#
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC Endpoint template

###############################################################################
Parameters:

  Environment:
    Description: Working environment
    Type: String
    MinLength: "1"
    MaxLength: "20"
    Default: staging
    AllowedValues: [ "prod", "staging" ]
    ConstraintDescription: >
      Environment name can only contain "prod" or "staging"

  EndpointService:
    Description: Amazon service to connect to
    AllowedValues: [ "cloudwatch", "ecr", "s3", "ses" ]
    Default: "s3"
    Type: String

  VpcCidrBlock:
    Description: CIDR block for the new VPC
    Type: String
    Default: "10.0.0.0/16"

  PrivateSubnetCidrBlock:
    Description: CIDR block for the private subnet used by interface endpoints
    Type: String
    Default: "10.0.1.0/24"

###############################################################################
Conditions:

  CreateVpcEndpointCloudwatch:
    !Equals [ !Ref EndpointService, cloudwatch ]

  CreateVpcEndpointEcr:
    !Equals [ !Ref EndpointService, ecr ]

  CreateVpcEndpointS3:
    !Equals [ !Ref EndpointService, s3 ]

  CreateVpcEndpointInterfaceSG:
    !Not [ !Equals [ !Ref EndpointService, s3 ] ]

  CreateVpcEndpointSes:
    !Equals [ !Ref EndpointService, ses ]

###############################################################################
Resources:

  # NETWORK INFRASTRUCTURE -------------
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-vpc"
      - Key: bashlinux:environment-name
        Value: !Ref Environment

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetCidrBlock
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-subnet"
      - Key: bashlinux:environment-name
        Value: !Ref Environment

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-private-rtb"
      - Key: bashlinux:environment-name
        Value: !Ref Environment

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  # Service: Cloudwatch ---------------
  VpcEndpointCloudwatch:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateVpcEndpointCloudwatch
    Properties:
      PrivateDnsEnabled: "true"
      SecurityGroupIds: [ !Ref VpcEndpointInterfaceSG ]
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      SubnetIds:
        - !Ref PrivateSubnet
      VpcEndpointType: Interface
      VpcId: !Ref Vpc

  # Service: ECR ----------------------
  VpcEndpointEcrApi:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateVpcEndpointEcr
    Properties:
      PrivateDnsEnabled: "true"
      SecurityGroupIds: [ !Ref VpcEndpointInterfaceSG ]
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      SubnetIds:
        - !Ref PrivateSubnet
      VpcEndpointType: Interface
      VpcId: !Ref Vpc

  VpcEndpointEcrDkr:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateVpcEndpointEcr
    Properties:
      PrivateDnsEnabled: "true"
      SecurityGroupIds: [ !Ref VpcEndpointInterfaceSG ]
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      SubnetIds:
        - !Ref PrivateSubnet
      VpcEndpointType: Interface
      VpcId: !Ref Vpc

  # Service: S3 -----------------------
  VpcEndpointS3:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateVpcEndpointS3
    Properties:
      PrivateDnsEnabled: false
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.${EndpointService}"
      VpcEndpointType: Gateway
      VpcId: !Ref Vpc

  # Service: SES ----------------------
  VpcEndpointSes:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateVpcEndpointSes
    Properties:
      PrivateDnsEnabled: "true"
      SecurityGroupIds: [ !Ref VpcEndpointInterfaceSesSG ]
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.email-smtp"
      SubnetIds:
        - !Ref PrivateSubnet
      VpcEndpointType: Interface
      VpcId: !Ref Vpc

  # SECURITY GROUPS --------------------
  VpcEndpointInterfaceSG:
    Type: AWS::EC2::SecurityGroup
    Condition: CreateVpcEndpointInterfaceSG
    Properties:
      GroupDescription: "HTTPS: Allow traffic to VPC Endpoints"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !GetAtt Vpc.CidrBlock
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-${EndpointService}-vpc-endpoint-sg"
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"

  VpcEndpointInterfaceSesSG:
    Type: AWS::EC2::SecurityGroup
    Condition: CreateVpcEndpointSes
    Properties:
      GroupDescription: "SMTP: Allow traffic to VPC Endpoints"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 465
          ToPort: 465
          CidrIp: !GetAtt Vpc.CidrBlock
        - IpProtocol: tcp
          FromPort: 587
          ToPort: 587
          CidrIp: !GetAtt Vpc.CidrBlock
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-${EndpointService}-vpc-endpoint-sg"
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"
